# vrengine

./: CMakeLists.txt  Readme.md  astc.h  gltf.cpp  gltf.h  main.cpp  material.h  math.cpp  math.h  memory_pool.h  quaternion.h  renderer.cpp  renderer.h  rendering.h  settings.gradle  system.cpp  system.h  typedef.h  vulkan.cpp  vulkan.h  xr.cpp  xr.h
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: gamepad.gltf  hands.gltf  tv.gltf
app/src/main/assets/shaders/: test_frag.spv  vert.spv
app/src/main/assets/textures/: dev.astc  hands_albedo.astc  tv_albedo.astc
app/src/main/res/values/: strings.xml
shaders/: test_frag.glsl  vert.glsl
